spacing fixed

--- a/src/styles/CreateProfile.css
+++ b/src/styles/CreateProfile.css
@@ -1,6 +1,6 @@
 .profile-form{
     width: 300px;
-    margin: 17vh auto;
+    margin: 7vh auto;
     padding: 20px;
     text-decoration: #fff;
     color: #dddddd;
